Updates on the document chapters

--- a/Document/Files/1_Introduction.tex
+++ b/Document/Files/1_Introduction.tex
@@ -2,7 +2,8 @@
 \mysection{Introduction}
 
 \mysubsection{Purpose}
-
+The purpose of this document is to provide a full description of the design of the
+EasyLib and EasyLib - Librarian mobile applications, two native Android applications, providing insights into the the goal of the system, the design of each component and how the project has been managed.
 
 \mysubsection{Scope}
 EasyLib is a mobile application that manage to make easier multiple management tasks that nowadays a library needs to deal with. It answers all the questions for which a library visitor usually stuck for an answer such as books description and availability, waiting queue for reserve a book, events taking place and news related to the library, and make really easy to the book search and reservation. The application allow the user to interface with all the libraries that choose to use EasyLib as management system, using a single identification process to interact with all of them.
@@ -29,10 +30,18 @@ EasyLib has been thought to cover also the Librarian necessity and help him into
 \end{itemize}
 
 \mysubsection{Document Structure}
-This paper is divided in n chapter:
-\begin{enumerate}
-	\setlength{\leftskip}{0.5cm}
-	\item The first chapter is composed by an introduction of the system, its application domain, its goals and a glossary containing the most common expression used in order to give to the reader a basic knowledge of the system and to make him understand better the subsequent parts.
+This paper is divided in six chapter.\\
+
+The first chapter is composed by an introduction of the system, its application domain, its goals and a glossary containing the most common expression used in order to give to the reader a basic knowledge of the system and to make him understand better the subsequent parts.\\\\
+In the second chapter we have provided a list of all the applications goals and the related requirements and we also listed their core functionalities with a synthetic description.\\
+
+The third chapter is devoted to the exposure of the overall design architecture of the system, the identification and definition of all the software components that characterize our system end to end and the external services and libraries used to accomplish all the goals that we aimed to satisfy. We also shown a deployment proposal and non-functionals requirements that we need to respect.\\
+
+The fourth chapter is exploited to show the most relevant decisions taken in the UI design and to show how the application looks to the final user using images taken during the real usage.\\
+
+In the fifth chapter we showed some runtime view diagrams to explain how the most sensitive functionalities of the system are carried out and the interaction between the different hardware tiers and software components.\\
+
+Finally, in the sixth chapter we have put in writing the implementation strategy that we followed to implement the system, how our team has been structured, the implementation process carried on and the test cases performed. 
 	
 	
-\end{enumerate}
+	
