[DOC] Inserted Use Cases

--- a/Document/Files/2_Overall_Description.tex
+++ b/Document/Files/2_Overall_Description.tex
@@ -206,6 +206,12 @@
 \mysubsection{Product Functions}
 \vspace{0.5cm}
 \mysubsubsection{EasyLib}
+\vspace*{0cm}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.4]{Images/UseCases/EasyLib_use_case}
+	\caption{EasyLib - Use Case}
+\end{figure}
 \begin{enumerate}
 \item \emph{Advanced book search:}the user can search a book in the libraries using any combination of parameters between title, author’s name and category and, if he needs, he can also restrict his search in only one of the available libraries. If the user is in the library, he can scan a QR code on the book to retrieve all its information.
 \item \emph{Consulting book information:} the user can to consult all the available book’s information such as title, author’s name, category, publisher, the number of copies of the book available in each library, etc.
@@ -216,7 +222,13 @@
 \item \emph{Set ratings:} the user can rate the books that he has read to spread his opinion to other readers.
 \item \emph{Keep track of read books:}the user can always access to the list of the book that he read directly and intuitively from his profile.
 \end{enumerate}
+
 \mysubsubsection{EasyLib - Librarian}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=0.4]{Images/UseCases/EasyLib_Librarian_use_case}
+	\caption{EasyLib - Librarian - Use Case}
+\end{figure}
 \begin{enumerate}
 \item \emph{Visualize his library information:}the librarian can visualize all the information inserted in his library such as books available, events, news, etc.
 \item \emph{Identify the user that reserved a book:} the librarian can scan the QRcode of a book and retrieve all the reservation for that book and the related user id. In this way the user can show to the librarian his personal Id authenticating himself and allowing the book delivering. A paired process is followed when the user returns a book.
