[DOC] Update of Document

--- a/Document/Files/1_Introduction.tex
+++ b/Document/Files/1_Introduction.tex
@@ -29,10 +29,11 @@ EasyLib has been thought to cover also the Librarian necessity and help him into
 	\item \lbrack Rn] : Requirement n
 \end{itemize}
 
+\newpage
 \mysubsection{Document Structure}
 This paper is divided in six chapter.\\
 
-The first chapter is composed by an introduction of the system, its application domain, its goals and a glossary containing the most common expression used in order to give to the reader a basic knowledge of the system and to make him understand better the subsequent parts.\\\\
+The first chapter is composed by an introduction of the system, its application domain, its goals and a glossary containing the most common expression used in order to give to the reader a basic knowledge of the system and to make him understand better the subsequent parts.\\\par
 In the second chapter we have provided a list of all the applications goals and the related requirements and we also listed their core functionalities with a synthetic description.\\
 
 The third chapter is devoted to the exposure of the overall design architecture of the system, the identification and definition of all the software components that characterize our system end to end and the external services and libraries used to accomplish all the goals that we aimed to satisfy. We also shown a deployment proposal and non-functionals requirements that we need to respect.\\
