--- a/Document/Files/2_Overall_Description.tex
+++ b/Document/Files/2_Overall_Description.tex
@@ -223,6 +223,7 @@
 \item \emph{Keep track of read books:}the user can always access to the list of the book that he read directly and intuitively from his profile.
 \end{enumerate}
 
+\newpage
 \mysubsubsection{EasyLib - Librarian}
 \begin{figure}[H]
 	\centering
