--- a/Document/Files/6_Implementation.tex
+++ b/Document/Files/6_Implementation.tex
@@ -26,6 +26,7 @@ Our team is composed by two Computer engineers with complementary competences an
 The work has been divided in three milestones. In these spans of time the team members were required to complete the tasks that have been established in the previous planning phase. Every week a meeting to discuss about the progresses were attended and new agreement finalized to proceed at the same speed were taken. If a team’s part terminated his tasks before the milestone’s day, it usually anticipated the work programmed for the subsequent milestone but remaining ready for eventually applying changes or corrections on the software already implemented. After each milestone, some days were employed for integrating front-end and back-end part to have always a working prototype. \\
 At the end of the implementation process the team has performed a Unit testing and functional testing campaign, in order to assure that all the functionalities worked correctly. Also a User acceptance test have been carried on, involving a restrict group of people which gave back feedback on their user experience that drove the developing process.
 
+\newpage
 \mysubsubsection{Test cases}
 As said before, in order to assure the correct behaviour of our application, we carried out tests of the main functionalities, trying to cover the wider surface of possible cases. We report below a list of the tests performed.
 
